--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -17,6 +17,7 @@
                     <h4 class="pull-right">$9.00/night</h4>
                     <h4><a><%= campground.name %></a></h4>
                     <p><%= campground.description %></p>
+                    <a class="btn btn-warning pull-right" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
                     <p>Posted by <%= campground.author.username %></p>
                 </div>
             </div>
